# loyalty

./: Dockerfile  README.md  pyproject.toml
src/: alembic.ini  config.py  db.py  entrypoint.sh  greeter_server.py  helloworld.proto  hw_pb2.py  hw_pb2_grpc.py  loyalty.proto  loyalty_pb2.py  loyalty_pb2.pyi  loyalty_pb2_grpc.py  main.py  models.py  pg_service.py  servicers.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 570cf625e26c_added_initial_tables.py  87234782c1bc_added_uuid_extension.py  ffee353124cc_added_initial_tables.py
src/core/: config.py  logging.py
src/database/: db.py  models.py  pg_service.py  service.py  servicers.py
src/protos/: loyalty.proto  loyalty_pb2.py  loyalty_pb2.pyi  loyalty_pb2_grpc.py
tests/: config.py  test_discount_apply.py  test_discount_create.py  test_promo_code_apply.py  test_promo_code_create.py  test_promo_code_free.py  test_promo_code_reserve.py
tests/protos/: loyalty_pb2.py  loyalty_pb2.pyi
